# md-translator-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  providers.yaml.example  run_test.sh
docs/: Error.md
src/: cli.rs  client.rs  config.rs  dedup.rs  engine.rs  error.rs  fallback.rs  lib.rs  main.rs  markdown.rs  reporting.rs  types.rs
src/ast/: batch.rs  extractor.rs  mod.rs  parse_response.rs  parser.rs  pipeline.rs  render.rs
src/cache/: disk.rs  memory.rs  mod.rs  two_tier.rs
src/provider/: concurrent.rs  deepl.rs  deeplx.rs  gtx.rs  mod.rs  openai_compat.rs  xml.rs
test_output/deeplx-new/gh-cli/: SKILL.zh.md
test_output/deeplx-new/ui-ux-pro-max/: SKILL.zh.md
test_output/deeplx/ui-ux-pro-max/: SKILL.zh.md
test_output/gtx/gh-cli/: SKILL.zh.md
test_output/gtx/ui-ux-pro-max/: SKILL.zh.md
test_output/llm/gh-cli/: SKILL.zh.md
test_output/llm/ui-ux-pro-max/: SKILL.zh.md
test_output/ulw-efficiency-cache/: gh-cli.SKILL.zh.md  ui-ux-pro-max.SKILL.zh.cached.md  ui-ux-pro-max.SKILL.zh.md
test_output/ulw-efficiency-config-final/: gh-cli.SKILL.zh.md  ui-ux-pro-max.SKILL.zh.md
test_output/ulw-efficiency-openai/: gh-cli.SKILL.zh.md  ui-ux-pro-max.SKILL.zh.md
test_output/ulw-efficiency-tuned-50/: gh-cli.SKILL.zh.md  ui-ux-pro-max.SKILL.zh.md
test_output/ulw-efficiency-tuned-80/: gh-cli.SKILL.zh.md  ui-ux-pro-max.SKILL.zh.md
tests/: backward_compat.rs  deeplx_integration.rs  integration_ast.rs  integration_cache.rs  integration_fallback.rs  mock_deepl.rs  mock_deeplx.rs  mock_openai.rs  provider_smoke.rs  shared_concurrency.rs  snapshot_translation.rs
tests/common/: mod.rs
tests/fixtures/: test_input.md
