[package]
name = "md-translator-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Translate Markdown while preserving structure"
license = "MIT"
repository = "https://github.com/linyuxuanlin/md-translator-rs"
homepage = "https://github.com/linyuxuanlin/md-translator-rs"
documentation = "https://docs.rs/md-translator-rs"
keywords = ["markdown", "translation", "i18n", "localization", "deepl"]
categories = ["text-processing", "internationalization", "command-line-utilities"]
exclude = [
    "providers.yaml",
    "test_input/",
    "test_md/",
    "run_test.sh",
    "AGENTS.md",
]

[workspace]
members = ["."]
resolver = "3"

[lib]
name = "md_translator_rs"
path = "src/lib.rs"

[[bin]]
name = "mdxlate"
path = "src/main.rs"

[[bin]]
name = "deeplx_export"
path = "src/bin/deeplx_export/main.rs"

[dependencies]
async-trait = "0.1.89"
blake3 = "1.8.2"
clap = { version = "4.5.50", features = ["derive", "env"] }
directories = "6.0.0"
futures = "0.3.31"
once_cell = "1.21.3"
regex = { version = "1.12.2", features = ["perf", "unicode"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
urlencoding = "2.1.3"
comrak = "0.37"
moka = { version = "0.12", features = ["future"] }
sled = "1.0"
deduplicate = "0.4"
quick-xml = "0.37"
serde_yaml = "0.9"
httpdate = "1.0.3"

[dev-dependencies]
criterion = "0.5"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
debug = false
overflow-checks = false
debug-assertions = false

[profile.bench]
inherits = "release"
opt-level = 3
